--- a/departments/ist/ist.css
+++ b/departments/ist/ist.css
@@ -11,9 +11,6 @@ html{
 
 /* ===== FONTS ===== */
 
-*{
-	color: #2c3c4e;
-}
 h1{
 	font-size: 36pt;
 	margin: 0;
@@ -39,7 +36,7 @@ h4{
 h5{
 	font-size: 12pt;
 	font-style: italic;
-	color: #59b263;
+	color: #A6CE39;
 }
 
 p{
@@ -49,7 +46,7 @@ p{
 hr{
 	width: 10%;
 	height: 1px;
-	background-color: #2c3c4e;
+	background-color: #2C3C4E;
 }
 
 .publications hr{
@@ -60,16 +57,16 @@ hr{
 	color: white;
 }
 
-.text-blue{
-	color: #2c3c4e;
+.text-dark-blue{
+	color: #2C3C4E;
 }
 
-.text-blue a{
-	color: #2c3c4e;
+.text-dark-blue a{
+	color: #2C3C4E;
 }
 
-.text-aqua{
-	color: #59b263;
+.text-green{
+	color: #A6CE39;
 }
 
 .text-center{
@@ -78,6 +75,10 @@ hr{
 
 .text-bold{
 	font-weight: bold;
+}
+
+.text-italic{
+	font-style: italic;
 }
 
 /* ===== BUTTONS ===== */
@@ -97,58 +98,58 @@ hr{
 	cursor: pointer;
 }
 
-.btn-aqua{
-	background-color: #59b263;
-	border-color: #59b263;
+.btn-green{
+	background-color: #A6CE39;
+	border-color: #A6CE39;
 	color: #fff !important;
 }
 
-.btn-aqua:hover{
-	color: #59b263 !important;
+.btn-green:hover{
+	color: #A6CE39 !important;
 }
 
-.btn-blue{
-	background-color: #2c3c4e;
-	border-color: #2c3c4e;
+.btn-dark-blue{
+	background-color: #2C3C4E;
+	border-color: #2C3C4E;
 	color: #fff !important;
 }
 
-.btn-blue:hover{
-	color: #2c3c4e !important;
+.btn-dark-blue:hover{
+	color: #2C3C4E !important;
 }
 
 /* ===== BACKGROUND DIVS ===== */
-.aqua-bg{
+.green-bg{
 	position: absolute;
 	left: 0;
 	top: 0;
 	right: 0;
 	bottom: 0;
-	background-color: rgba(89, 178, 99, .8);
+	background-color: rgba(166, 206, 57, .8);
 }
 
-.blue-bg{
+.dark-blue-bg{
 	position: absolute;
 	left: 0;
 	top: 0;
 	right: 0;
 	bottom: 0;
-	background-color: rgba(44, 60, 78, .8);
+	background-color: rgba(46, 60, 78, .8);
 }
 
 .blur-bg{
-	z-index: 99; /* изображение размыто */
+	z-index: 99;
     background-image: url(image.png);
     background-size: cover;
     background-repeat: no-repeat;
     -webkit-filter: blur(5px);
     -moz-filter: blur(5px);
     filter: blur(5px);
-    filter: url('blur.svg#blur'); /* путь к svg */
+    filter: url('blur.svg#blur');
 }
 
-.transfotrm-diagonal-aqua{
-	background-color: rgba(89, 178, 99, .8);
+.transfotrm-diagonal-green{
+	background-color: rgba(166, 206, 57, .8);
 	width: 60%;
 	position: absolute;
 	z-index: 0;
@@ -156,18 +157,17 @@ hr{
 	bottom: 0;
 }
 
-.transfotrm-diagonal-aqua:after{
+.transfotrm-diagonal-green:after{
 	content: '';
 	position: absolute;
 	border-right: 300px solid transparent;
-	border-top: calc(100vw - 100px) solid rgba(89, 178, 99, .8);
+	border-top: calc(100vw - 100px) solid rgba(166, 206, 57, .8);
     left: 100%;
     top: 0;
 }
 
-.transfotrm-diagonal-blue{
-	background-color: rgba(44, 60, 78, .8);
-	/*width: 17.8%;*/
+.transfotrm-diagonal-dark-blue{
+	background-color: rgba(46, 60, 78, .8);
 	width: 18%;
 	position: absolute;
 	z-index: 0;
@@ -175,11 +175,11 @@ hr{
 	top: 0;
 	bottom: 0;
 }
-.transfotrm-diagonal-blue:before{
+.transfotrm-diagonal-dark-blue:before{
 	content: '';
 	position: absolute;
 	border-left: 300px solid transparent;
-	border-bottom: calc(100vw - 100px) solid rgba(44, 60, 78, .8);
+	border-bottom: calc(100vw - 100px) solid rgba(46, 60, 78, .8);
     left: -300px;
     top: 0;
 }
@@ -192,7 +192,7 @@ hr{
 	bottom: 0;
 	left: 0;
 	z-index: 1050;
-	background-color: #2c3c4e;
+	background-color: #2C3C4E;
 	text-align: center;
 	line-height: calc(100vh);
 	vertical-align: middle;
@@ -202,25 +202,25 @@ hr{
 .header-dep .navbar{
 	background-color: #fff;
 	box-shadow: 0px 2px 10px #333;
-	/*padding-top: 0;*/
-	/*padding-bottom: 0;*/
+	padding-top: 0;
+	padding-bottom: 0;
 }
 
 .navbar-light .navbar-nav .nav-link{
 	font-weight: bold;
 	font-size: 18px;
-	color: #2c3c4e;
+	color: #2C3C4E;
 	border-bottom: 2px solid #fff;
 	padding: 20px 10px;
 }
 
 .navbar-light .navbar-nav .nav-link:hover{
-	color: #59b263;
+	color: #A6CE39;
 }
 
 .navbar-light .navbar-nav .nav-link:focus{
-	color: #59b263;
-	border-color: #59b263;
+	color: #A6CE39;
+	border-color: #A6CE39;
 }
 
 .navbar-light .navbar-nav .active>.nav-link,
@@ -228,8 +228,8 @@ hr{
  .navbar-light .navbar-nav .nav-link.show,
   .navbar-light .navbar-nav .show>.nav-link{
 	font-weight: bold;
-	color: #59b263;
-	border-color: #59b263;
+	color: #A6CE39;
+	border-color: #A6CE39;
 }
 
 /* ===== MAIN PAGE ===== */
@@ -242,7 +242,7 @@ section{
 .bg-img-ist{
 	width: 100%;
 	min-height: 80%;
-	background-image: url(../../sources/img/news/IMG_183222222.jpg); /* ../img/department/ist/dep_ist.jpg */
+	background-image: url(../../sources/img/department/ist/dep_ist.jpg);
 	background-repeat: no-repeat;
 	background-position: center center;
 	background-size: 100% auto;
@@ -259,7 +259,6 @@ section{
 	width: 100%;
 	height: 150px;
 	position: relative;
-	/*position: absolute;*/
 	z-index: 20;
 }
 
@@ -273,7 +272,7 @@ section{
 .department-news-card{
 	width: 90%;
 	margin: auto;
-	background-color: #2c3c4e;
+	background-color: #2C3C4E;
 	padding: 10px;
 }
 
@@ -290,7 +289,7 @@ section{
 }
 
 .carousel-controls span i{
-	color: #2c3c4e;
+	color: #2C3C4E;
 	font-size: 36pt;
 	font-weight: 100;
 }
@@ -307,7 +306,6 @@ section{
 .about-department{
 	width: 100%;
 	height: auto;
-	/*padding: 30px 0;*/
 	position: relative;
 	background-color: #fff;
 }
@@ -321,7 +319,7 @@ section{
 
 .about-department-info{
 	padding: 20px;
-	background-color: #2c3c4e;
+	background-color: #2C3C4E;
 }
 
 .subdivisions{
@@ -340,7 +338,6 @@ section{
 	width: 100%;
 	height: auto;
 	margin-bottom: 10px;
-	box-shadow: 1px 1px 2px #333;
 }
 
 .subdivision-container{
@@ -349,7 +346,7 @@ section{
 
 .subdivision-title{
 	width: 25%;
-	background-color: #59b263;
+	background-color: #A6CE39;
 	padding: 10px;
 	display: table-cell;
 	vertical-align: middle;
@@ -397,14 +394,16 @@ section{
 }
 
 .education-part{
-	
+	min-height: 100%;
+	background-color: #fff;
+	position: relative;
 }
 
 .education-part-title{
-	width: 100%;
+	width: 100.25%;
 	height: 75px;
 	padding: 10px;
-	background-color: #2c3c4e;
+	background-color: #2C3C4E;
 	display: table;
 }
 
@@ -418,6 +417,17 @@ section{
 	height: auto;
 	padding: 10px;
 	background-color: #fff;
+}
+
+.education-part-content > p{
+	margin-bottom: 30px;
+}
+
+.education-part-content > a{
+	position: absolute;
+	left: 50%;
+	margin-left: -52.815px;
+	bottom: 10px;
 }
 
 canvas{
@@ -527,7 +537,7 @@ canvas{
 
 .proj-card{
 	margin-bottom: 20px;
-	background-color: #2c3c4e;
+	background-color: #2C3C4E;
 }
 
 .proj-img, .proj-info{
@@ -556,7 +566,7 @@ canvas{
 	width: 100%;
 	height: auto;
 	padding: 80px 0 20px;
-	background-color: #59b263;
+	background-color: #A6CE39;
 	position: relative;
 }
 
@@ -572,7 +582,7 @@ canvas{
 
 .partner{
 	margin-bottom: 30px;
-	border-left: 5px solid #2c3c4e;
+	border-left: 5px solid #2C3C4E;
 	padding: 10px;
 }
 
@@ -580,13 +590,20 @@ canvas{
 
 .footer{
 	width: 100%;
-	background-color: #2c3c4e;
-	/*padding: 40px 10% 20px;*/
+	background-color: #2C3C4E;
 	padding: 20px 0;
+}
+
+.footer .copyright{
+	height: 100%;
+	display: table;
+	margin: auto;
 }
 
 .footer p{
 	margin: 0;
+	display: table-cell;
+	vertical-align: middle;
 }
 
 .footer p a{
@@ -596,33 +613,33 @@ canvas{
 }
 
 
-/* ============ TEACHERS IST */
-.teacher-ist{
+/* ============ TEACHERS IST, PROJECTS IST ======= */
+.teacher-ist, .ist-projects{
 	width: 100%;
 	height: auto;
 	padding: 90px 0 40px;
 }
 
-.teachers-bar{
+.teachers-bar, .projects-bar{
 	width: 100%;
 	height: auto;
 	box-shadow: 1px 1px 4px #999;
 	background-color: #fff;
 }
 
-.teachers-bar ul{
+.teachers-bar ul, .projects-bar ul{
 	padding: 0;
 	margin: 0;
 	list-style-type: none;
 	display: block;
 }
 
-.teachers-bar ul li:hover a{
-	color: #59b263;
+.teachers-bar ul li:hover a, .projects-bar ul li:hover a{
+	color: #A6CE39;
 	cursor: pointer;
 }
 
-.teachers-bar ul li a{
+.teachers-bar ul li a, .projects-bar ul li a{
 	width: 100%;
 	display: inline-block;
 	color: #333;
@@ -630,24 +647,33 @@ canvas{
 	padding: 10px 20px;
 }
 
-.teachers-bar ul li a.active{
+.teachers-bar ul li a.active, .projects-bar ul li a.active{
 	color: #fff;
 	font-weight: bold;
-	background-color: #2c3c4e;
+	background-color: #2C3C4E;
 }
 
-.teachers-info{
+.teachers-info, .projects-info{
 	width: 100%;
 	height: auto;
 	background-color: #fff;
 }
 
-.teachers-info .img{
+.teachers-info .img, .projects-info .img{
 	width: 30%;
 	margin: 0 0 20px 20px;
 	box-shadow: 1px 1px 4px #999;
 }
 
-.teachers-info .img img{
+.teachers-info .img img, .projects-info .img img{
 	width: 100%;
+}
+
+@media(max-width: 992px){
+	.practice-bases:before, 
+	.partners:before,
+	.foa-stud-proj:before,
+	.science:before,
+	.teachers:before,
+	.education:before{display: none;}
 }
